# agentRL

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
agentrl/: __init__.py
agentrl/core/: __init__.py  base.py  config.py  rollout.py  trainer.py
agentrl/generation/: __init__.py  continuous.py  paged_kv.py  prefill.py  scheduler.py  speculative.py
agentrl/memory/: __init__.py  buffer.py  layout.py
agentrl/observability/: __init__.py  debugger.py  logger.py  profiler.py  replay.py
agentrl/runtime/: __init__.py  controller.py
docs/: colab_demo_results.md
docs/superpowers/plans/: 2026-04-20-paged-kv-default-path.md  2026-04-23-phase1-agentrl-vs-trl-single-turn.md
docs/superpowers/specs/: 2026-04-20-paged-kv-default-path-design.md  2026-04-24-agentrl-trl-compatible-grpo-design.md
examples/: __init__.py  benchmark_gsm8k_subset.py  benchmark_systems.py  gsm8k_subset.py  math_env.py  train_math.py
tests/: test_base.py  test_buffer.py  test_continuous.py  test_examples.py  test_layout.py  test_memory.py  test_observability.py  test_paged_kv.py  test_prefill.py  test_rollout.py  test_runtime.py  test_scheduler.py  test_speculative.py  test_trainer.py
