[project]
name = "agentrl"
version = "0.1.0"
description = "Single-GPU GRPO post-training framework for pluggable text environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "torch>=2.1.0",
    "transformers>=4.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
